.old/Tautulli/overlays/example/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  labels:
    app: tautulli
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.50.156
  selector:
    app: tautulli
  ports:
  - name: "http-web"
    protocol: TCP
    targetPort: 8181
    port: 8181
