.old/Tautulli/overlays/example/vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "tautulli"
spec:
  hosts:
    - charon.sol.milkyway
  gateways:
    - tautulli
  http:
    - match:
      - uri:
          prefix: "/"
      route:
        - destination:
            host: "tautulli"
            port:
              number: 8181
